--- a/index.html
+++ b/index.html
@@ -1,20 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Udemy</title>
     <!--external links-->
+
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400..900&family=Gravitas+One&display=swap" rel="stylesheet">
-<!--font icon-->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Winky+Sans:ital,wght@0,300..900;1,300..900&display=swap"
+        rel="stylesheet">
+
+    <!--font icon-->
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
 
 
     <!--internal Links-->
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <!--Navbar-->
     <div class="navbar">
@@ -55,15 +66,15 @@
     <!--recommended-->
 
     <div class="recommended">
-        <h1 class="recommended__title">Recommeneded for you</h1>
-        <p>Pick the best fit</p>
+        <h1 class="recommended__title">Recommended for you</h1>
+        <p>From critical skills to technical topics, Udemy supports your professional development</p>
         <div class="recommended__container">
             <div class="course-card">
                 <img src="./images/course1.jpg" alt="course image">
                 <h3>2023 Python Data Visualisation Masterclass</h3>
                 <p>Col Steel</p>
                 <p>4.8 ⭐⭐⭐⭐</p>
-                <p>499 <del>1,000</del></p>
+                <p> <i class="fa-solid fa-indian-rupee-sign"></i>499  <del>1,000</del></p>
             </div>
 
             <div class="course-card">
@@ -71,7 +82,7 @@
                 <h3>Web Development Bootcamp 2023 | Advance</h3>
                 <p>Col Steel</p>
                 <p>3.8 ⭐⭐⭐</p>
-                <p>6,990 <del>11,000</del></p>
+                <p> <i class="fa-solid fa-indian-rupee-sign"></i>6,990  <del>11,000</del></p>
             </div>
 
             <div class="course-card">
@@ -79,7 +90,7 @@
                 <h3>Master UI/UX Designing with Figma</h3>
                 <p>Col Steel</p>
                 <p>4.8 ⭐⭐⭐⭐</p>
-                <p>499 <del>2000</del></p>
+                <p><i class="fa-solid fa-indian-rupee-sign"></i>499  <del>2000</del></p>
             </div>
 
             <div class="course-card">
@@ -87,7 +98,7 @@
                 <h3>Basic to Advance Core Java Training</h3>
                 <p>Col Steel</p>
                 <p>2.8 ⭐⭐</p>
-                <p>4,999 <del>20,000</del></p>
+                <p><i class="fa-solid fa-indian-rupee-sign"></i>4,999  <del>20,000</del></p>
             </div>
         </div>
     </div>
@@ -95,18 +106,106 @@
     <!--Topics-->
 
     <div class="topics">
-        <h1 class="topics__title">Topics Recommeneded for you</h1>
+        <h1 class="topics__title">Learners are viewing</h1>
         <div class="topics__container">
             <p>Java</p>
             <p>JavaScript</p>
-            <p>React.Js</p><p>Java</p>
-            <p>JavaScript</p>
-            <p>React.Js</p><p>Java</p>
-            <p>JavaScript</p>
-            <p>JavaScript</p>
-            
+            <p>Node.Js</p>
+            <p>Mongo DB</p>
+            <p>Azure</p>
+            <p>React.Js</p>
+            <p>GitHub</p>
+            <p>CSS</p>
+            <p>HTML5</p>
+
         </div>
     </div>
+
+    <!--Popular Section-->
+
+    <div class="popular">
+        <h1 class="popular__title">Most Popular Content</h1>
+        <p class="popular__subtitle">Reach goals faster with one of our plans or programs. Try one free today or contact sales to learn more.</p>
+        <div class="popular__container">
+            <div class="course-card">
+                <img src="./images/p1.jpg" alt="course image">
+                <h3>Full Stack Web Development</h3>
+                <p>Col Steel</p>
+                <p>4.8 ⭐⭐⭐⭐</p>
+                <p> <i class="fa-solid fa-indian-rupee-sign"></i>499  <del>1,000</del></p>
+            </div>
+
+            <div class="course-card">
+                <img src="./images/p2.jpg" alt="course image">
+                <h3>AWS Cloud Practitioner Certificate</h3>
+                <p>Col Steel</p>
+                <p>3.8 ⭐⭐⭐</p>
+                <p> <i class="fa-solid fa-indian-rupee-sign"></i>6,990  <del>11,000</del></p>
+            </div>
+
+            <div class="course-card">
+                <img src="./images/p3.jpg" alt="course image">
+                <h3>AWS Architect Associate</h3>
+                <p>Col Steel</p>
+                <p>4.8 ⭐⭐⭐⭐</p>
+                <p><i class="fa-solid fa-indian-rupee-sign"></i>499  <del>2000</del></p>
+            </div>
+            <div class="course-card">
+                <img src="./images/p4.jpg" alt="course image">
+                <h3>2025 100 Days of Code</h3>
+                <p>Col Steel</p>
+                <p>4.8 ⭐⭐⭐⭐</p>
+                <p> <i class="fa-solid fa-indian-rupee-sign"></i>499  <del>1,000</del></p>
+            </div>
+
+            <div class="course-card">
+                <img src="./images/p5.jpg" alt="course image">
+                <h3>ChatGPT</h3>
+                <p>Col Steel</p>
+                <p>3.8 ⭐⭐⭐</p>
+                <p> <i class="fa-solid fa-indian-rupee-sign"></i>6,990  <del>11,000</del></p>
+            </div>
+
+            <div class="course-card">
+                <img src="./images/p6.jpg" alt="course image">
+                <h3>Complete AI Guide</h3>
+                <p>Col Steel</p>
+                <p>4.8 ⭐⭐⭐⭐</p>
+                <p><i class="fa-solid fa-indian-rupee-sign"></i>499  <del>2000</del></p>
+            </div>
+
+
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="footer__s1">
+            <div class="footer__s1__1">
+                <h3>About</h3>
+                <p>Careers</p>
+                <p>Contact Us</p>
+                <p>Blog</p>
+
+            </div>
+            <div class="footer__s1__2">
+                <h3>Discovery Udemy</h3>
+                <p>Teach on Udemy</p>
+                <p>Plans & Pricing</p>
+                <p>Help & Support</p>
+
+            </div>
+
+        </div>
+        <div class="footer__s2">
+            <div class="navbar-p1">
+                <h1 class="navbar-p1__name">Udemy </h1>
     
+            </div>
+            <p>&copy;2025 Udemy,Inc.</p>
+
+        </div>
+    </div>
+
 </body>
+
 </html>
