--- a/index.html
+++ b/index.html
@@ -40,10 +40,21 @@
 
         <div class="navbar-p3">
             <p>Course</p>
-            <p>My Learning</p>
+            <!-- <p>My Learning</p> -->
+            <div class="navbar-p3__learning">
+                <p>My Learning</p>
+                <div class="navbar-p3__learning__popup">
+                    <p>Oops! Not purchased Yet...</p>
+                </div>
+
+            </div>
             <i class="fa-solid fa-cart-shopping"></i>
             <i class="fa-solid fa-bell"></i>
-            <i class="fa-solid fa-user"></i>
+            <div class="navbar-p3__profile">
+                <i class="fa-solid fa-user"></i>
+                <div class="navbar-p3__profile__popup">My Profile</div>
+            </div>
+
         </div>
 
     </div>
@@ -61,7 +72,17 @@
     <!--sale image-->
     <div class="sale-image">
         <img src="./images/sale-image.jpg" alt="Sales-Image">
+
+        <div class="sale-image__offer">
+            <h2>In-demand skills. Available on demand.</h2>
+            <p>Get the top skills that others are using to advance their careers.</p>
+            <div class="sale-image__offer__button">
+                <button>Learn JAVA</button>
+                <button>Learn ML</button>
+            </div>
+        </div>
     </div>
+
 
     <!--recommended-->
 
@@ -74,7 +95,7 @@
                 <h3>2023 Python Data Visualisation Masterclass</h3>
                 <p>Col Steel</p>
                 <p>4.8 ⭐⭐⭐⭐</p>
-                <p> <i class="fa-solid fa-indian-rupee-sign"></i>499  <del>1,000</del></p>
+                <p> <i class="fa-solid fa-indian-rupee-sign"></i>499 <del>1,000</del></p>
             </div>
 
             <div class="course-card">
@@ -82,7 +103,7 @@
                 <h3>Web Development Bootcamp 2023 | Advance</h3>
                 <p>Col Steel</p>
                 <p>3.8 ⭐⭐⭐</p>
-                <p> <i class="fa-solid fa-indian-rupee-sign"></i>6,990  <del>11,000</del></p>
+                <p> <i class="fa-solid fa-indian-rupee-sign"></i>6,990 <del>11,000</del></p>
             </div>
 
             <div class="course-card">
@@ -90,7 +111,7 @@
                 <h3>Master UI/UX Designing with Figma</h3>
                 <p>Col Steel</p>
                 <p>4.8 ⭐⭐⭐⭐</p>
-                <p><i class="fa-solid fa-indian-rupee-sign"></i>499  <del>2000</del></p>
+                <p><i class="fa-solid fa-indian-rupee-sign"></i>499 <del>2000</del></p>
             </div>
 
             <div class="course-card">
@@ -98,7 +119,7 @@
                 <h3>Basic to Advance Core Java Training</h3>
                 <p>Col Steel</p>
                 <p>2.8 ⭐⭐</p>
-                <p><i class="fa-solid fa-indian-rupee-sign"></i>4,999  <del>20,000</del></p>
+                <p><i class="fa-solid fa-indian-rupee-sign"></i>4,999 <del>20,000</del></p>
             </div>
         </div>
     </div>
@@ -125,14 +146,15 @@
 
     <div class="popular">
         <h1 class="popular__title">Most Popular Content</h1>
-        <p class="popular__subtitle">Reach goals faster with one of our plans or programs. Try one free today or contact sales to learn more.</p>
+        <p class="popular__subtitle">Reach goals faster with one of our plans or programs. Try one free today or contact
+            sales to learn more.</p>
         <div class="popular__container">
             <div class="course-card">
                 <img src="./images/p1.jpg" alt="course image">
                 <h3>Full Stack Web Development</h3>
                 <p>Col Steel</p>
                 <p>4.8 ⭐⭐⭐⭐</p>
-                <p> <i class="fa-solid fa-indian-rupee-sign"></i>499  <del>1,000</del></p>
+                <p> <i class="fa-solid fa-indian-rupee-sign"></i>499 <del>1,000</del></p>
             </div>
 
             <div class="course-card">
@@ -140,7 +162,7 @@
                 <h3>AWS Cloud Practitioner Certificate</h3>
                 <p>Col Steel</p>
                 <p>3.8 ⭐⭐⭐</p>
-                <p> <i class="fa-solid fa-indian-rupee-sign"></i>6,990  <del>11,000</del></p>
+                <p> <i class="fa-solid fa-indian-rupee-sign"></i>6,990 <del>11,000</del></p>
             </div>
 
             <div class="course-card">
@@ -148,14 +170,14 @@
                 <h3>AWS Architect Associate</h3>
                 <p>Col Steel</p>
                 <p>4.8 ⭐⭐⭐⭐</p>
-                <p><i class="fa-solid fa-indian-rupee-sign"></i>499  <del>2000</del></p>
+                <p><i class="fa-solid fa-indian-rupee-sign"></i>499 <del>2000</del></p>
             </div>
             <div class="course-card">
                 <img src="./images/p4.jpg" alt="course image">
                 <h3>2025 100 Days of Code</h3>
                 <p>Col Steel</p>
                 <p>4.8 ⭐⭐⭐⭐</p>
-                <p> <i class="fa-solid fa-indian-rupee-sign"></i>499  <del>1,000</del></p>
+                <p> <i class="fa-solid fa-indian-rupee-sign"></i>499 <del>1,000</del></p>
             </div>
 
             <div class="course-card">
@@ -163,7 +185,7 @@
                 <h3>ChatGPT</h3>
                 <p>Col Steel</p>
                 <p>3.8 ⭐⭐⭐</p>
-                <p> <i class="fa-solid fa-indian-rupee-sign"></i>6,990  <del>11,000</del></p>
+                <p> <i class="fa-solid fa-indian-rupee-sign"></i>6,990 <del>11,000</del></p>
             </div>
 
             <div class="course-card">
@@ -171,7 +193,7 @@
                 <h3>Complete AI Guide</h3>
                 <p>Col Steel</p>
                 <p>4.8 ⭐⭐⭐⭐</p>
-                <p><i class="fa-solid fa-indian-rupee-sign"></i>499  <del>2000</del></p>
+                <p><i class="fa-solid fa-indian-rupee-sign"></i>499 <del>2000</del></p>
             </div>
 
 
@@ -199,7 +221,7 @@
         <div class="footer__s2">
             <div class="navbar-p1">
                 <h1 class="navbar-p1__name">Udemy </h1>
-    
+
             </div>
             <p>&copy;2025 Udemy,Inc.</p>
 
